day04 commit 레이아웃 스타일

--- a/Web_Front/WebContent/day02_prac/prac5.html
+++ b/Web_Front/WebContent/day02_prac/prac5.html
@@ -1,74 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연습문제5</title>
+    <link rel="stylesheet" href="../day04_css/prac5.css">
 </head>
+
 <body>
     <h1>레드향 주문하기</h1>
-    <form action="">
-        <fieldset>
-            <legend>상품 선택</legend>
-            <p>주문할 상품을 선택해 주세요</p>
-            <ul>
-                <li>
-                    <input type="checkbox" name="" id="">선물용 3kg
-                    <input type="number" min="0" max="5">개 <small>(최대 5개)</small>
-                </li>
-                <li>
-                    <input type="checkbox" name="" id="">선물용 5kg
-                    <input type="number" min="0" max="3">개 <small>(최대 3개)</small>
-                </li>
-                <li>
-                    <input type="checkbox" name="" id="">가정용 3kg
-                    <input type="number" min="0" max="5">개 <small>(최대 5개)</small>
-                </li>
-                <li>
-                    <input type="checkbox" name="" id="">가정용 3kg
-                    <input type="number" min="0" max="3">개 <small>(최대 3개)</small>
-                </li>
-            </ul>
-            <p>포장 선택</p>
-            <ul>
-                <li><input type="radio" name="wrapping">선물 포장</li>
-                <li><input type="radio" name="wrapping">선물 포장 안함</li>
-            </ul>
-        </fieldset>
-        <fieldset>
-            <legend>배송 정보</legend>
-            <ul>
-                <li>
-                    이름
-                    <input type="text">
-                </li>
-                <li>
-                    배송 주소
-                    <input type="text">
-                </li>
-                <li>
-                    이메일
-                    <input type="email">
-                </li>
-                <li>
-                    연락처
-                    <input type="tels">
-                </li>
-                <li>
-                    배송 지정
-                    <input type="date"><small>(주문일로부터 최소 3일 이후)</small>
-                </li>
-                <li>
-                    메모
-                    <textarea name="" id="" cols="40" rows="4"></textarea>
-                </li>
-            </ul>
-        </fieldset>
-        <div>
-            <input type="submit" value="주문하기">
-            <input type="reset" value="취소하기">
-        </div>
-    </form>
+    <div id="container">
+        <form action="">
+            <fieldset>
+                <legend>상품 선택</legend>
+                <p>주문할 상품을 선택해 주세요</p>
+                <ul>
+                    <li>
+                        <input type="checkbox" name="" id="">선물용 3kg
+                        <input type="number" min="0" max="5" value="0">개 <small>(최대 5개)</small>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="" id="">선물용 5kg
+                        <input type="number" min="0" max="3" value="0">개 <small>(최대 3개)</small>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="" id="">가정용 3kg
+                        <input type="number" min="0" max="5" value="0">개 <small>(최대 5개)</small>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="" id="">가정용 3kg
+                        <input type="number" min="0" max="3" value="0">개 <small>(최대 3개)</small>
+                    </li>
+                </ul>
+                <p>포장 선택</p>
+                <ul>
+                    <li><input type="radio" name="wrapping">선물 포장</li>
+                    <li><input type="radio" name="wrapping">선물 포장 안함</li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <legend>배송 정보</legend>
+                <ul id="shipping">
+                    <li>
+                        <label for="name">이름</label>
+                        <input type="text" id="name">
+                    </li>
+                    <li>
+                        <label for="addr">배송 주소</label>
+                        <input type="text" id="addr">
+                    </li>
+                    <li>
+                        <label for="mail">이메일</label>
+                        <input type="email" id="mail">
+                    </li>
+                    <li>
+                        <label for="phone">연락처</label>
+                        <input type="tel" id="phone">
+                    </li>
+                    <li>
+                        <label for="day">배송 지정</label>
+                        <input type="date" id="day"><small>(주문일로부터 최소 3일 이후)</small>
+                    </li>
+                    <li>
+                        <label for="memo">메모</label>
+                        <textarea name="" id="memo" cols="40" rows="4"></textarea>
+                    </li>
+                </ul>
+            </fieldset>
+            <div id="button-area">
+                <input type="submit" value="주문하기">
+                <input type="reset" value="취소하기">
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
