--- a/Web_Front/WebContent/day02_prac/prac6.html
+++ b/Web_Front/WebContent/day02_prac/prac6.html
@@ -6,16 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연습문제6</title>
-    <style>
-        div {
-            border: 1px solid black;
-            padding: 20px 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="../day04_css/prac6.css">
 </head>
 
 <body>
-    <div>
+    <div id="container">
         <h1>프론트엔드 개발자 지원서</h1>
         <p>HTML, CSS, Javascript에 대한 기술적 이해와 경험이 있는 분을 찾습니다</p>
         <hr>
@@ -23,12 +18,12 @@
             <h4>개인정보</h4>
             <ul>
                 <li>
-                    이름
-                    <input type="text" placeholder="공백없이 입력하세요.">
+                    <label for="name">이름</label>
+                    <input type="text" id="name" placeholder="공백없이 입력하세요.">
                 </li>
                 <li>
-                    연락처
-                    <input type="tel">
+                    <label for="phone">연락처</label>
+                    <input type="tel" id="phone">
                 </li>
             </ul>
             <h4>지원분야</h4>
@@ -44,7 +39,7 @@
                 </li>
             </ul>
             <h4>지원동기</h4>
-            <textarea cols="60" rows="5" placeholder="본사 지원 동기를 간략히 써 주세요."></textarea>
+            <textarea cols="60" rows="5" placeholder="본사 지원 동기를 간략히 써주세요."></textarea>
             <div>
                 <input type="submit" value="접수하기">
                 <input type="reset" value="취소하기">
