--- a/Web_Front/WebContent/day02_prac/prac4.html
+++ b/Web_Front/WebContent/day02_prac/prac4.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연습문제4</title>
+    <link rel="stylesheet" href="../day04_css/prac4.css">
 </head>
+
 <body>
     <h1>레드향 주문하기</h1>
-    <form action="">
-        <fieldset>
-            <legend>배송 정보</legend>
-            <ul>
-                <li>이름</li>
-                <input type="text" required>
-                <li>배송 주소</li>
-                <input type="text" required>
-                <li>이메일</li>
-                <input type="email">
-                <li>연락처</li>
-                <input type="tel" placeholder="하이픈 빼고 입력해 주세요.(01012345678)">
-                <li>배송 지정</li>
-                <input type="date">
-                (주문일로부터 최소 3일 이후)
-            </ul>
-        </fieldset>
-        <div>
-            <input type="submit" value="주문하기">
-            <input type="reset" value="취소하기">
-        </div>
-    </form>
+    <div id="container">
+        <form action="">
+            <fieldset>
+                <legend>배송 정보</legend>
+                <ul id="shipping">
+                    <li>
+                        <label for="user-name">이름</label>
+                        <input type="text" id="user-name" required>
+                    </li>
+                    <li>
+                        <label for="addr">배송 주소 </label>
+                        <input type="text" id="addr" required>
+                    </li>
+                    <li>
+                        <label for="email">이메일</label>
+                        <input type="email" id="email">
+                    </li>
+                    <li>
+                        <label for="phone">연락처</label>
+                        <input type="tel" id="phone" placeholder="하이픈 빼고 입력해 주세요.(01012345678)">
+                    </li>
+                    <li>
+                        <label for="d-day">배송 지정</label>
+                        <input type="date" id="d-day">(주문일로부터 최소 3일 이후)
+                    </li>
+                </ul>
+            </fieldset>
+            <div>
+                <input type="submit" value="주문하기">
+                <input type="reset" value="취소하기">
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
