day05 commit 1. 시맨틱 태크를 이용한 홈페이지 만들기 2. 포지션스타일 3. 자바스크립트 문법

--- a/Web_Front/WebContent/day05/html_css/7.gogreen_layout_semantic.html
+++ b/Web_Front/WebContent/day05/html_css/7.gogreen_layout_semantic.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go Green Go Semantics</title>
-    <link rel="stylesheet" href="../day04_prac/gogreen.css">
+    <link rel="stylesheet" href="/day04_prac/gogreen.css">
 </head>
 
 <body>
@@ -14,10 +14,10 @@
     <div id="container">
         <header id="header">
             <div id="header-layer1">
-                <img src="../images/image/logo.jpg" alt="로고">
+                <img src="/images/image/logo.jpg" alt="로고">
             </div>
             <div id="header-layer2">
-                <img src="../images/image/mainlogo.jpg" alt="메인로고">
+                <img src="/images/image/mainlogo.jpg" alt="메인로고">
             </div>
         </header>
         <nav id="nav">
@@ -33,21 +33,21 @@
         <section id="main-layer2">
             <div id="img-top">
                 <div id="top-left">
-                    <img src="../images/image/main_img1.jpg" alt="img1">
+                    <img src="/images/image/main_img1.jpg" alt="img1">
                     <p>나무를 심는 사람들</p>
                 </div>
                 <div id="top-right">
-                    <img src="../images/image/main_img2.jpg" alt="img2">
+                    <img src="/images/image/main_img2.jpg" alt="img2">
                     <p>아이들에게 녹색미래를..</p>
                 </div>
             </div>
             <div id="img-bottom">
                 <div id="bottom-left">
-                    <img src="../images/image/main_img3.jpg" alt="img3">
+                    <img src="/images/image/main_img3.jpg" alt="img3">
                     <p>설악산을 살리는 길</p>
                 </div>
                 <div id="bottom-right">
-                    <img src="../images/image/main_img4.jpg" alt="img4">
+                    <img src="/images/image/main_img4.jpg" alt="img4">
                     <p>사라지는 북극곰들</p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
         </aside>
     </main>
     <footer id="footer">
-        <img src="../images/image/footer.JPG" alt="푸터">
+        <img src="/images/image/footer.JPG" alt="푸터">
     </footer>
     </div>
 </body>
